# lilLogic

./: main.py  pyproject.toml
app/: app.py
app/widgets/: file_menu.py  help_menu.py  node_editor.py  node_selector.py
internal/: app.py  node_db.py
internal/base/: base_node.py  base_node_field.py  base_node_link.py
internal/base/abc/: link.py
internal/managers/: __init__.py  node_db.py  node_importer.py  node_linker.py  node_packages_importer.py  save_manager.py
internal/node_importer/: node_packages_importer.py
internal/nodeedit/: __init__.py  base_node.py  base_node_link.py
internal/nodeedit/abc/: field.py  link.py  linkableabc.py
internal/nodeedit/fields/: __init__.py  base_node_field.py  bool_field.py  field.py  int_field.py  linkable.py
internal/utils/: __init__.py  logger.py  node_conversion.py
nodes/: base_node.py  logic_and.py  logic_in.py  logic_not.py  logic_out.py
nodes/binconvert/: __init__.py  bin_in.py  bin_out.py  combiner.py  splitter.py
nodes/logic/: __init__.py  logic_and.py  logic_in.py  logic_not.py  logic_or.py  logic_out.py
nodes/mux/: __init__.py  mux2to1.py  mux4to2.py
nodes/trigger/: __init__.py  d_trigger.py  segment7display.py
